Included an exception for .md files in directories (mainly to ensure the empty output directories get pushed to remote)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ images-to-modify/*
 modified/*
 webp-images/*
 
+# Exceptions
+!*/*.md
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
